MDEV-35848, MDEV-35568 Reintroduce delete_while_scanning for multi_delete

Reintroduces delete_while_scanning optimization for multi_delete.
Reverse some test changes from the initial feature devlopment now
that we delete-on-the-fly once again.