sql/sql_class.h
@@ -7564,7 +7564,6 @@ class multi_delete :public select_result_interceptor
   TABLE_LIST *delete_tables, *table_being_deleted;
   TMP_TABLE_PARAM *tmp_table_param;
   TABLE **tmp_tables, *main_table;
-  Unique **tempfiles;
   ha_rows deleted, found;
   uint table_count;
   int error;
@@ -7573,6 +7572,7 @@ class multi_delete :public select_result_interceptor
   bool transactional_tables;
   /* True if at least one table we delete from is not transactional */
   bool normal_tables;
+  bool delete_while_scanning;
   /*
      error handling (rollback and binlogging) can happen in send_eof()
      so that afterward abort_result_set() needs to find out that.
